* Numerous minor tag/rendering cleanup towards XHTML 1.0 Strict
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@1350 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/web/static/css/forms.css
+++ b/share/web/static/css/forms.css
@@ -14,7 +14,7 @@ div.form_field {
     float: left;
 }
 
-div.form_field label.label {
+div.form_field label.label, div.form_field span.label {
     float: left;
     width: 15%;
     text-align: right;
