--- a/doc/talks/takahashi.css
+++ b/doc/talks/takahashi.css
@@ -28,7 +28,7 @@
 	background: black !important;
 	color: white !important;
         */
-        /* font-weight: bold; */
+        font-weight: bold;
 	font-family:
                 "Candara"
                 "Georgia"
