* Request arguments are easy to get your hands on
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@1386 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/doc/examples/CounterDemo/share/web/templates/index.html
+++ b/doc/examples/CounterDemo/share/web/templates/index.html
@@ -1,7 +1,7 @@
+<%args>
+$counter => 0
+</%args>
 <%init>
-my $counter = Jifty->web->request->argument('counter') || 0;
-
-
 my $request;
 
 $request = Jifty::Request->new( path => Jifty->web->request->path );
