Show an autocomplete icon in autocomplete fields
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@1398 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/web/static/css/forms.css
+++ b/share/web/static/css/forms.css
@@ -52,6 +52,11 @@ input.text, input.date, input.password, textarea, select {
     padding: 0.2em;
 }
 
+form input.ajaxautocompletes {
+    background: #fff url(/static/images/css/fieldbg-autocomplete.gif) repeat-x top left;
+    padding-left: 18px;
+}
+
 input.date {
     width: 10em;
 }
