* Remove old clone code; it can be re-added when it is better thought-out, but currently it just adds non-working complexity.  * Continuation calls now are formally split into two phases, call and return.  Return is in the caller's context (path) and is handled as early as possible, so that the dispatcher doesn't see the return path more than once.  Call is equivilent to a 'return' statement, and is in the continuation's context.  * Refactor continuations to use data structures in Requests  * Bulletproof data structure parsing slightly  * Specify that actions added to requests with add_action are forced to not have run yet
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@1416 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/t/Continuations/share/web/templates/index.html
+++ b/t/Continuations/share/web/templates/index.html
@@ -14,5 +14,5 @@ $been_helped => 0
 <% Jifty->web->form->end %>
 
 % if($been_helped) {
-<p>Congratulations on being helped.</p>
+<p>Congratulations on being helped: <% $been_helped %>.</p>
 % }
