* autocomplete fields now have "..." as artwork on right-hand-side.   intead of "A              |\              A B" on the left-hand-side.  (Look, ASCII art in commit log!)
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@1436 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/web/static/css/forms.css
+++ b/share/web/static/css/forms.css
@@ -53,8 +53,8 @@ input.text, input.date, input.password, textarea, select {
 }
 
 form input.ajaxautocompletes {
-    background: #fff url(/static/images/css/fieldbg-autocomplete.gif) repeat-x top left;
-    padding-left: 18px;
+    background: #fff url(/static/images/css/fieldbg-autocomplete.gif) repeat-x top right;
+    padding-right: 18px;
 }
 
 input.date {
