* do not whiten all tables, just calendar tables.
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@1437 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/web/static/css/yui/calendar/calendar.css
+++ b/share/web/static/css/yui/calendar/calendar.css
@@ -109,7 +109,7 @@ td.calcell.calcellhover {
 
 /* Added to perform some correction for Opera 8.5
    hover redraw bug */
-table:hover {
+.calendar table:hover {
 	background-color:#FFF;
 }
 
