* First pass at letting users edit their application like a Wiki
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@1446 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/web/static/css/halos.css
+++ b/share/web/static/css/halos.css
@@ -99,3 +99,26 @@
     right:0.5em;
     bottom:0;
 }
+
+a.inline_edit {
+
+    display: block;
+    width: 0;
+    padding-left: 22px;
+    min-height: 20px;
+
+    background: no-repeat left center;
+    background: url(/static/images/silk/pencil.png) no-repeat 0 0;
+}
+
+a.inline_create {
+
+    display: block;
+    width: 0;
+    padding-left: 22px;
+    min-height: 20px;
+
+    background: no-repeat left center;
+    background: url(/static/images/silk/pencil_add.png) no-repeat 0 0;
+}
+
