--- a/share/web/static/css/forms.css
+++ b/share/web/static/css/forms.css
@@ -140,6 +140,6 @@ div.subline {
     background: #dddddd;
 }
 
-input.placeholder {
+input.placeholder, textarea.placeholder {
     color: #666;
 }
