--- a/share/web/templates/__jifty/admin/index.html
+++ b/share/web/templates/__jifty/admin/index.html
@@ -1,13 +1,3 @@
-<%init>
-
-# Set up application-specific parts
-for my $model ( Jifty->class_loader->models ) {
-    next unless $model->isa( 'Jifty::Record' );
-    next if $model =~ /::SUPER$/;
-    push @models, $model;
-}
-
-</%init>
 <&|/_elements/wrapper, title => 'Jifty Administrative Console' &>
 
 <h1><%_('Database Administration')%></h1>
@@ -18,7 +8,7 @@ for my $model ( Jifty->class_loader->models ) {
     
 <h2><%_('Models')%></h2>
 <ul>
-% foreach my $model (@models) {
+% foreach my $model (Jifty->class_loader->models) {
 % next unless ($model =~ /^(?:.*)::(.*?)$/);
 % my $type = $1;
 <li><% Jifty->web->link( url => '/__jifty/admin/model/'.$type, label => $type)%>
