* admin models: Add the ->isa('Jifty::Record') back
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@1697 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/web/templates/__jifty/admin/index.html
+++ b/share/web/templates/__jifty/admin/index.html
@@ -9,6 +9,7 @@
 <h2><%_('Models')%></h2>
 <ul>
 % foreach my $model (Jifty->class_loader->models) {
+% next unless $model->isa('Jifty::Record');
 % next unless ($model =~ /^(?:.*)::(.*?)$/);
 % my $type = $1;
 <li><% Jifty->web->link( url => '/__jifty/admin/model/'.$type, label => $type)%>
