Update the dismiss button styles
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@1710 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/web/static/css/notices.css
+++ b/share/web/static/css/notices.css
@@ -28,10 +28,10 @@ div#messages,  div#errors {
 #dismiss_errors
 {
     padding-left: 16px;
-    background: url(/static/images/silk/cancel.png) no-repeat;
+    background: url(/static/images/silk/cancel_grey.png) no-repeat;
     position: absolute;
-    top: 1px;
-    right: 1px;
+    top: 0.4em;
+    right: 2px;
     width: 0;
     display: block;
     text-indent: -9999em;
