Some Behaviour profiling UI fixes.
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@1715 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/plugins/ProfileBehaviour/share/web/static/css/behaviour-profile.css
+++ b/plugins/ProfileBehaviour/share/web/static/css/behaviour-profile.css
@@ -1,7 +1,7 @@
 #behaviour-profile-data {
     width: 90%;
     height: 90%;
-    position: absolute;
+    position: fixed;
     left: 5%;
     top: 5%;
     background-color: white;
@@ -61,7 +61,7 @@
 
 
 #show-behaviour-profile {
-    position: absolute;
-    left: 0;
+    position: fixed;
+    left: 0.5em;
     bottom: 0;
 }
