Make the admin UI look slightly less crappy.
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@1822 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/web/static/css/forms.css
+++ b/share/web/static/css/forms.css
@@ -101,6 +101,7 @@ div.inline div.form_field {
 }
 
 div.inline div.form_field label.label,
+div.inline div.form_field span,
 div.inline .hints,
 div.inline .error
 {
@@ -128,7 +129,11 @@ div.inline div.form_field label.label {
 
 .jifty_admin.item.inline {
      clear: both;
- }
+}
+
+.jifty_admin .editlink {
+    float: right;
+}
 
 div.subline {
     display: inline;
