--- a/share/web/static/css/calendar.css
+++ b/share/web/static/css/calendar.css
@@ -9,3 +9,19 @@
     padding: 0 1em 0 1em;
     font-size: 1.5em;
 }
+.select-free {
+    overflow: hidden;
+    z-index:10;
+}
+
+.select-free iframe {
+    display:none;
+    display/**/:block;
+    position:absolute;
+    top:0;
+    left:0;
+    z-index:-1;
+    filter:mask();
+    width:3000px;
+    height:3000px;
+}
