* Chat: Style cleanup; use UserAgent as username to make things spicier.
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@2075 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/examples/Chat/share/web/templates/index.html
+++ b/examples/Chat/share/web/templates/index.html
@@ -1,6 +1,6 @@
 <&| /_elements/wrapper, title => "Jifty chat server", subtitle => "" &>
-<% Jifty::Web::PageRegion->new( name => "message", path => '/__jifty/empty',)->render %>
-<% Jifty::Web::PageRegion->new( name => "sender", path => '/fragments/sender',)->render %>
+<% Jifty::Web::PageRegion->new( name => "message", path => '/__jifty/empty' )->render %>
+<% Jifty::Web::PageRegion->new( name => "sender", path => '/fragments/sender' )->render %>
 </&>
 <%init>
 Jifty->subs->add(
