* Even more I18N+L10N, this time for admin crud pages and calendar.html
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@2253 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/web/templates/__jifty/admin/index.html
+++ b/share/web/templates/__jifty/admin/index.html
@@ -26,6 +26,6 @@
 </ul>
 
 <h2>Done?</h2>
-<% Jifty->web->return( to => "/", label => 'Back to the application') %>
+<% Jifty->web->return( to => "/", label => _('Back to the application')) %>
 
 </&>
