--- a/share/web/templates/helpers/calendar.html
+++ b/share/web/templates/helpers/calendar.html
@@ -1,4 +1,4 @@
-<& /_elements/header, title => 'Calendar' &>
+<& /_elements/header, title => _('Calendar'_ &>
 <body class="calpopup">
 
 <a href="#" onclick="window.close(); return false;"><% _('Close window')%></a>
