* Even more default UI I18N+L10N.
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@2265 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/web/templates/__jifty/admin/index.html
+++ b/share/web/templates/__jifty/admin/index.html
@@ -4,7 +4,7 @@
 
 <p><%_('This console lets you manage the records in your Jifty database. Below, you should see a list of all your database tables. Feel free to go through and add, delete or modify records.')%></p>
 
-<p><%_(q{To disable this administrative console, add "framework: AdminMode: 0" to your application's configuration file.})%></p>
+<p><%_('To disable this administrative console, add "AdminMode: 0" under the "framework:" settings in the config file (etc/config.yml).')%></p>
     
 <h2><%_('Models')%></h2>
 <ul>
