Fix a missing closing brace
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@2358 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/web/static/css/forms.css
+++ b/share/web/static/css/forms.css
@@ -190,6 +190,7 @@ div.inline div.form_field label.label {
 .up_select a {
     font-weight: bold;
     color: #900;
+}
 
 div.subline {
     display: inline;
