Indicate mandatory fields visually
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@2462 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/web/static/css/forms.css
+++ b/share/web/static/css/forms.css
@@ -205,3 +205,11 @@ div.subline {
 input.placeholder, textarea.placeholder {
     color: #666;
 }
+
+form div.mandatory label {
+    color: #a00000;
+}
+
+form div.form_field.mandatory label:after {
+    content: " (*)";
+}
