Less obstrusive mandatory visual indicator.  This will likely almost always want app-specific styling.
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@2464 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/web/static/css/forms.css
+++ b/share/web/static/css/forms.css
@@ -207,9 +207,6 @@ input.placeholder, textarea.placeholder {
 }
 
 form div.mandatory label {
-    color: #a00000;
+    font-weight: bold;
 }
 
-form div.form_field.mandatory label:after {
-    content: " (*)";
-}
