* change back to "canonicalization_note" to avoid bugs * fix dismiss message link
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@2912 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/web/static/css/forms.css
+++ b/share/web/static/css/forms.css
@@ -31,7 +31,7 @@ div.form-field .hints {
     color: #999999;
 }
 
-div.form-field .error, div.form-field .warning, div.form-field .canonicalization-note {
+div.form-field .error, div.form-field .warning, div.form-field .canonicalization_note {
     float: right;
     width: 88%;
     text-align: left;
