* make the 'hey! it's admin mode' bit not overwrite the menu
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@2957 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/web/static/css/base.css
+++ b/share/web/static/css/base.css
@@ -65,7 +65,7 @@ div#jifty-wait-message {
 div.warning {
  position: absolute;
  top: 0;
- left: 0;
+ left: 50%;
  right: 0;
 
  background-color: red;
