* don't require a bunch of unused modules that don't trickle to the templates * don't set the Home tab twice * use Pod::Simple::HTML where we need it
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@3035 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/plugins/Jifty/Plugin/OnlineDocs/web/templates/__jifty/online_docs/content.html
+++ b/share/plugins/Jifty/Plugin/OnlineDocs/web/templates/__jifty/online_docs/content.html
@@ -33,6 +33,7 @@ foreach my $file (@options) {
 }
 my $body;
 my $schema;
+use Pod::Simple::HTML;
 my $converter = Pod::Simple::HTML->new();
 if($n !~ /^Jifty\//) {
     if ($total_body =~ /package (.*?)::Schema;(.*)package/ismx) {
