* Upgraded YUI to 2.2.1   * NOTICE: if you are using yui tabview,     please use tabview.css instead of tabs.css * Added yui/element-beta.js and yui/menu.js in Web.pm
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@3118 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/web/static/css/main.css
+++ b/share/web/static/css/main.css
@@ -10,4 +10,5 @@
 @import "app.css";
 @import "autocomplete.css";
 @import "yui/calendar/calendar.css";
+@import "yui/menu/menu.css";
 @import "notices.css";
