--- a/share/web/static/css/yui/tabview/tabs.css
+++ b/share/web/static/css/yui/tabview/tabs.css
@@ -1,3 +1,5 @@
+/* XXX: It is a older CSS file, please use tabview.css instead */
+
 /* default space between tabs */
 .yui-navset-top .yui-nav li, .yui-navset-bottom .yui-nav li {
     margin-right:0.5em; /* horizontal tabs */
