reserve bare update for a moment, alert people to switch to Jifty.update, and tests for that. also added /usr/lib/mozilla-firefox(default firefox path on Gentoo) to $ENV{PATH} for Selenium.
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/branches/prototype-1.6@4333 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/t/TestApp-Plugin-OnClick/share/web/templates/onclick.html
+++ b/t/TestApp-Plugin-OnClick/share/web/templates/onclick.html
@@ -3,7 +3,7 @@
 args:<% Jifty->web->request->arguments->{'J:V-region-content'} || ''%>
 
 <% Jifty->web->link(
-               label   => 'content',
+               label   => 'replace content',
                id => 'replace_content',
                onclick => {
                    replace_with => '/content1.html',
@@ -16,5 +16,11 @@ args:<% Jifty->web->request->arguments->{'J:V-region-content'} || ''%>
     path     => '/content.html',
 ) %>
 
+
+<a id="original_content" 
+href="/onclick.html?J:V-region-content=%2Fcontent.html"
+onclick="return update(
+{'continuation':{},'actions':{},'fragments':[{'mode':'Replace','args':{},'region':'content','path':'/content.html'}],'action_arguments':{}},
+this );">revert content</a>
 
 </&>
